Yet another gitignore rule fix. And readded in makefiles I was suppose to track

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,6 @@
 *.app
 
 #specific repo rules
-Makefile
 config.h
 config.log
 config.status
@@ -40,4 +39,7 @@ stamp-h1
 *.Po
 wishwn
 wn
+lib/Makefile
+lib/wnres/Makefile
+src/Makefile
 
